# Bench2Drive

./: eval.json  pyproject.toml
checkpoints/: README.md  admlp_b2d.ckpt  admlp_b2d_jittor.pkl  bevformer_base_b2d.pth  bevformer_tiny_b2d.pth  r101_dcn_fcos3d_pretrain.pth  resnet50-19c8e357.pth  tcp_b2d.ckpt  tcp_b2d_jittor.pkl  uniad_base_b2d.pth  uniad_tiny_b2d.pth  vad_b2d_base.pth
leaderboard/scripts/: run_evaluation.sh  run_evaluation_debug.sh
leaderboard/team_code/: ADMLP  LICENSE  README.md  TCP  admlp_b2d_agent.py  planner.py  requirement.txt  tcp_b2d_agent.py  team_code  tools
