[project]
name = "bench2drive"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "carla (>=0.9.15,<0.10.0)",
    "dictor (>=0.1.12,<0.2.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "transforms3d (>=0.4.2,<0.5.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "py-trees (==0.8.3)",
    "simple-watchdog-timer (>=0.1.1,<0.2.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "ephem (>=4.2,<5.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
